# HorusEngine

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  HorusEngine.sln  README.md  premake5.lua  vcpkg.json
HorusEngine/: HorusEngine.vcxproj  HorusEngine.vcxproj.filters
HorusEngine/src/: Horus.h
HorusEngine/src/Horus/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
HorusEngine/src/Horus/Events/: ApplicationEvent.h  Event.h  KeyEvent.h
Sandbox/: Sandbox.vcxproj
Sandbox/src/: SandboxApp.cpp
src/: CMakeLists.txt  main.cpp
src/Core/: CMakeLists.txt
src/Core/Application/: Application.cpp  Application.h  CMakeLists.txt  Horus.cpp  Horus.h
src/Graphics/: CMakeLists.txt
src/Graphics/Shader/: CMakeLists.txt  Shader.cpp  Shader.h
src/Utils/: CMakeLists.txt
src/Utils/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
