# src/CMakeLists.txt

add_subdirectory(Core)
add_subdirectory(Utils)

# add_subdirectory(Core/ECS)
# add_subdirectory(Core/Input)
# add_subdirectory(Core/Time)
# add_subdirectory(Core/ResourceManager)
# add_subdirectory(Graphics)
# add_subdirectory(Graphics/OpenGL)
# add_subdirectory(Graphics/Components)